--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
         }
 
         .saldo-positivo {
-            color: var(--success-color);
+            color: var(--light-color);
         }
 
         .saldo-negativo {
